Update user properties file path and modify open files in project configuration

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ file.reference.spring-web-5.3.30.jar=C:\\Users\\user\\Music\\KhanzaHMSWindows\\l
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=/home/admin-server/.netbeans/21/build.properties
