--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,6 +3,8 @@ do.depend=false
 do.jar=true
 do.jlink=false
 file.reference.jackson-core-2.18.1.jar=C:\\Users\\user\\Music\\KhanzaHMSWindows\\lib\\jackson-core-2.18.1.jar
+file.reference.javafx-swt.jar=/home/admin-server/KHANZA/lib/javafx-swt.jar
+file.reference.poi-examples-3.9-20121203.jar=/home/admin-server/KHANZA/lib/poi-examples-3.9-20121203.jar
 file.reference.spring-core-5.3.30.jar=C:\\Users\\user\\Music\\KhanzaHMSWindows\\lib\\spring-core-5.3.30.jar
 file.reference.spring-web-5.3.30.jar=C:\\Users\\user\\Music\\KhanzaHMSWindows\\lib\\spring-web-5.3.30.jar
 javac.debug=true
